--- a/pages/login/login.wxml
+++ b/pages/login/login.wxml
@@ -1,21 +1,19 @@
 <!--pages/login/login.wxml-->
-
-<view class="text_middle">
-  <text class="text_middle">点点账号登陆</text>
+<view class='vertical_layout center_main hint margin_normal'>
+  <text class='margin_normal'>已经注册的用户可以直接登录</text>
+  <text>未注册的用户点击登录会自动创建账号</text>
 </view>
 <view class="input_layout">
   <text class="input_title">账号</text>
-  <input class="input_edit" style="text" placeholder="请输入邮箱" bindinput="emailInput"/>
+  <input class="input_edit" style="text" placeholder="请输入邮箱" bindinput="emailInput" />
 </view>
 <view class="part_line"></view>
 
 <view class="input_layout">
   <text class="input_title">密码</text>
-  <input class="input_edit" style="text" password="true" placeholder="请输入密码"  bindinput="passwordInput"/>
+  <input class="input_edit" style="text" password="true" placeholder="请输入密码" bindinput="passwordInput" />
 </view>
 
-<view class="line"></view>
+<view class="part_line"></view>
 
-<button class="login_button" type="primary" bindtap="dLogin">登陆</button>
-<view class="or_text_middle"><text>或者</text></view>
-<button class="login_button" bindtap="weixinLoginTap">微信登陆</button>
+<button class="createBillBtn" hover-class="createBillBtnHover" bindtap="dLogin">登陆/注册</button>
