--- a/pages/login/login.wxss
+++ b/pages/login/login.wxss
@@ -12,8 +12,8 @@
 .input_layout {
   display: flex;
   background: #fff;
-  padding: 20rpx;
-  margin: 10rpx 0rpx;
+  padding: 20rpx 0;
+  margin: 10rpx 5%;
 }
 
 .input_title {
@@ -50,6 +50,8 @@
   font-size: 0.7em;
   color: #898989;
 }
-.login_button {
-  margin: 20rpx;
+
+.hint{
+  color: #666;
+  font-size: 10pt;
 }
