--- a/pages/mine/mine.wxml
+++ b/pages/mine/mine.wxml
@@ -4,13 +4,16 @@
     <view bindtap="bindViewTap" class="userinfo">
       <image class="userinfo-avatar" src="{{userInfo.avatar}}"></image>
       <text class="nickname">{{userInfo.nickname}}</text>
+      <text class="idtext">{{userInfo.uid}}</text>
     </view>
   </view>
 
   <scroll-view scroll-y style="height :100%">
     <view class="item_layout" style="background:{{buttonBgo}}" bindtap="myStoryTap" bindtouchstart="touchStart1" bindtouchend="touchEnd">
       <image src="../../image/history.png" class="icon_left"></image>
-      <view class="title_text"><text>我的故事</text></view>
+      <view class="title_text">
+        <text>绑定对象</text>
+      </view>
       <image src="../../image/more.png" class="icon_right"></image>
     </view>
 
@@ -26,7 +29,9 @@
 
     <view class="item_layout" style="background:{{buttonBgr}}" bindtap="logoutTap" bindtouchstart="touchStart3" bindtouchend="touchEnd">
       <image src="../../image/setting.png" class="icon_left"></image>
-      <view class="title_text"><text>退出登陆</text></view>
+      <view class="title_text">
+        <text>退出登陆</text>
+      </view>
     </view>
 
     <view class="part_line"></view>
