--- a/app.wxss
+++ b/app.wxss
@@ -53,6 +53,10 @@
   margin: 20rpx;
 }
 
+.margin_big{
+  margin: 30rpx;
+}
+
 .auto {
   flex: auto;
 }
@@ -87,29 +91,34 @@
 }
 
 .color_gray {
-  color: #666666;
+  color: #666;
 }
 
 .color_graylight {
-  color: #999999;
+  color: #999;
 }
 
 .color_black {
-  color: #333333;
+  color: #333;
 }
 
-.font_big{
+.font_big {
   font-size: 14pt;
 }
 
-.font_normal{
+.font_normal {
   font-size: 12pt;
 }
 
-.font_small{
+.font_small {
   font-size: 10pt;
 }
 
-.bold{
+.bold {
   font-weight: bold;
+}
+
+.canvas {
+  width: 100%;
+  height: 200px;
 }
