修复登陆问题，更新ui

--- a/app.wxss
+++ b/app.wxss
@@ -1,5 +1,43 @@
 /**app.wxss**/
 
+.wxToast_mask {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  left: 0px;
+  top: 0px;
+  z-index: 10000;
+  background: rgba(0, 0, 0, 0);
+  opacity: 0;
+  display: none;
+}
+
+.wxToast_show {
+  display: block;
+}
+
+.wxToast_content {
+  max-width: 80%;
+  min-width: 90px;
+  position: absolute;
+  left: 50%;
+  top: 20%;
+  transform: translate3d(-50%, 0, 0);
+  padding: 15px;
+  color: #fff;
+  font-size: 12pt;
+  text-align: center;
+  border-radius: 5px;
+  background: rgba(0, 0, 0, 0.8);
+}
+
+.wxToast_img {
+  width: 55px;
+  height: 55px;
+  display: block;
+  margin: 0 auto 8px auto;
+}
+
 .container {
   height: 100%;
   display: flex;
@@ -53,7 +91,7 @@
   margin: 20rpx;
 }
 
-.margin_big{
+.margin_big {
   margin: 30rpx;
 }
 
@@ -116,9 +154,4 @@
 
 .bold {
   font-weight: bold;
-}
-
-.canvas {
-  width: 100%;
-  height: 200px;
 }
