--- a/pages/bind/bind.wxml
+++ b/pages/bind/bind.wxml
@@ -1,4 +1,5 @@
 <!--pages/bind/bind.wxml-->
+<import src="../../template/temp.wxml" />
 <view class='container'>
   <text class='notice'>如果您已经绑定了恋人，该操作会解绑之前的恋人，请谨慎处理</text>
 
@@ -6,3 +7,6 @@
 
   <button class="createBillBtn" hover-class="createBillBtnHover" bindtap="bindLover">绑定</button>
 </view>
+
+
+<template is="wxToast" data="{{...wxToastConfig}}"></template>
