--- a/pages/bill/bill.wxml
+++ b/pages/bill/bill.wxml
@@ -4,9 +4,16 @@
   <image></image>
 </view>
 
+<view class='today_layout'>
+  <text class='today_tag'>今日消费</text>
+  <text class='today_money'>{{todayCost}}</text>
+</view>
+
 <button class='createBillBtn' hover-class='createBillBtnHover' bindtap='createBill'>记一笔</button>
 
 <view wx:for="{{billList}}" wx:key="{{...item.index}}">
   <template is="cardItem" data="{{...item}}">
   </template>
 </view>
+
+<template is="wxToast" data="{{...wxToastConfig}}"></template>
