--- a/pages/analysis/analysis.wxss
+++ b/pages/analysis/analysis.wxss
@@ -6,15 +6,17 @@
   padding-left: 3pt;
   margin: 50rpx 20rpx;
   font-size: 10pt;
-  color: gray;
+  color: #333;
 }
 
 .canvas {
   width: 100%;
   height: 200px;
+  margin-top: 20rpx;
 }
 
 .canvas_rect{
   width: 100%;
   height: 300px;
+  margin-top: 20rpx;
 }
