--- a/pages/analysis/analysis.wxml
+++ b/pages/analysis/analysis.wxml
@@ -34,11 +34,12 @@
 <text class='title_text'>近半年消费走势</text>
 <canvas canvas-id="halfYearCanvas" disable-scroll="true" class="canvas"></canvas>
 
-<text class='title_text'>本月双方消费比例</text>
-<view wx:for="{{loverList}}" wx:key="{{...item.index}}">
-  <template is="loverCostItem" data="{{...item}}">
-  </template>
-</view>
-
+<block wx:if="{{showLover}}">
+  <text class='title_text'>本月双方消费比例</text>
+  <view wx:for="{{loverList}}" wx:key="{{...item.index}}">
+    <template is="loverCostItem" data="{{...item}}">
+    </template>
+  </view>
+</block>
 
 <template is="wxToast" data="{{...wxToastConfig}}"></template>
