--- a/app.wxss
+++ b/app.wxss
@@ -21,13 +21,13 @@
   min-width: 90px;
   position: absolute;
   left: 50%;
-  top: 20%;
+  top: 40%;
   transform: translate3d(-50%, 0, 0);
-  padding: 15px;
+  padding: 15rpx;
   color: #fff;
   font-size: 12pt;
   text-align: center;
-  border-radius: 5px;
+  border-radius: 6rpx;
   background: rgba(0, 0, 0, 0.8);
 }
 
