--- a/pages/mine/mine.wxss
+++ b/pages/mine/mine.wxss
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 50rpx;
+  padding: 50rpx 0;
   background: #eff1f4;
 }
 
