--- a/app.wxss
+++ b/app.wxss
@@ -128,6 +128,20 @@
   bottom: 0;
 }
 
+.wxLoginBtn{
+  margin: 20rpx 5%; 
+  background-color: #f7f7f7;
+  color: color_gray;
+  bottom: 0;
+}
+
+.wxLoginBtnHover{
+  margin: 20rpx 5%; 
+  background-color:#f1f1f1;
+  color: color_gray;
+  bottom: 0;
+}
+
 .color_gray {
   color: #666;
 }
