--- a/pages/login/login.wxss
+++ b/pages/login/login.wxss
@@ -1,12 +1,9 @@
 /* pages/login/login.wxss */
 
 .text_middle {
-  width: 100%;
-  height: 3em;
-  text-align: center;
-  background: #eff1f4;
-  line-height: 3em;
-  font-size: 1em;
+  display: flex;
+  justify-content: center;
+  font-size: font_small;
 }
 
 .input_layout {
