--- a/pages/bill/bill.wxml
+++ b/pages/bill/bill.wxml
@@ -11,7 +11,7 @@
 
 <button class='createBillBtn' hover-class='createBillBtnHover' bindtap='createBill'>记一笔</button>
 
-<view wx:for="{{billList}}" wx:key="{{...item.index}}">
+<view wx:for="{{billList}}" wx:key="{{item.index}}">
   <template is="cardItem" data="{{...item}}">
   </template>
 </view>
