--- a/pages/create/create.wxml
+++ b/pages/create/create.wxml
@@ -7,9 +7,9 @@
   <input class='moneyInput' placeholder="请输入金额" type="digit" bindinput='inputMoney'></input>
 </view>
 <view class='line'></view>
-<view class="test">
-  <view class="test_wrap" style="width:{{tag.twp}}rpx;">
-    <view wx:for="{{tag.tags}}" class="test_item {{item.selected ? 'item_selected' : ''}}" style="width:{{tag.swp}}rpx;" data-index="{{index}}" bindtap="selectItem">
+<view class="tag">
+  <view class="tag_wrap" style="width:{{tag.twp}}rpx;">
+    <view wx:for="{{tag.tags}}" class="tag_item {{item.selected ? 'item_selected' : ''}}" style="width:{{tag.swp}}rpx;" data-index="{{index}}" bindtap="selectItem">
       <view class="item_wrap">
         <image class="item_img" src="{{item.image}}" />
         <view class="item_title">{{item.name}}</view>
@@ -32,8 +32,14 @@
 
 <view class='textLayout'>
   <text>备注:</text>
-  <input class='margin_normal auto' placeholder="请输入备注（选填）" bindinput='inputNote'></input>
+  <input style='margin :0 20rpx;' class=' auto' value='{{note}}' placeholder="请输入备注（选填）" bindinput='inputNote'></input>
 </view>
+<view class='stagLayout'>
+  <view wx:for="{{recommend}}" wx:key="{{item}}">
+    <text class='stagItem' bindtap='selectedNote'>{{item.note}}</text>
+  </view>
+</view>
+
 <button class='createBillBtn' hover-class="createBillBtnHover" bindtap='createBill'>记一笔</button>
 
 
