--- a/pages/create/create.wxss
+++ b/pages/create/create.wxss
@@ -12,7 +12,7 @@
 
 /* 选择标签 */
 
-.test {
+.tag {
   width: 100%;
   padding: 20rpx 0;
   margin-bottom: 20rpx;
@@ -22,38 +22,38 @@
   -webkit-overflow-scrolling: touch;
 }
 
-.test_wrap {
+.tag_wrap {
   min-width: 750rpx;
 }
 
-.test_wrap .test_item {
+.tag_wrap .tag_item {
   display: inline-block;
   text-align: center;
   font-size: 0;
 }
 
-.test_wrap .test_item .item_wrap {
+.tag_wrap .tag_item .item_wrap {
   width: 120rpx;
   height: 122rpx;
   padding: 10rpx 0;
   margin: 0 auto;
 }
 
-.test_wrap .test_item .item_img {
+.tag_wrap .tag_item .item_img {
   width: 60rpx;
   height: 60rpx;
   display: inline-block;
   padding-bottom: 10rpx;
 }
 
-.test_wrap .test_item .item_title {
+.tag_wrap .tag_item .item_title {
   text-align: center;
   width: 100%;
   font-size: 10pt;
   color: #666;
 }
 
-.test_wrap .test_item.item_selected .item_wrap {
+.tag_wrap .tag_item.item_selected .item_wrap {
   border: 1rpx dashed #ff7073;
   border-radius: 6rpx;
 }
@@ -64,4 +64,24 @@
   align-items: center;
   font-size: 12pt;
   color: #666;
+}
+
+.stagLayout {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin-left: 5%;
+  margin-right: 5%;
+  margin-bottom: 10pt;
+}
+
+.stagItem {
+  background: lightgray;
+  text-align: center;
+  border-radius: 2pt;
+  color: white;
+  font-size: 9pt;
+  margin-top: 10rpx;
+  margin-right: 10rpx;
+  padding: 1pt 2pt;
 }
