--- a/pages/login/login.wxml
+++ b/pages/login/login.wxml
@@ -18,10 +18,10 @@
 
 <view class="part_line"></view>
 
-<button class="createBillBtn" hover-class="createBillBtnHover" bindtap="dLogin">登录/注册</button>
+<button class="createBillBtn" hover-class="createBillBtnHover" open-type="getUserInfo" bindgetuserinfo="bindIGetUserInfo" bindtap="dLogin">登录/注册</button>
 
 <text class="text_middle font_small color_gray">或者</text>
 
-<button class="wxLoginBtn" hover-class="wxLoginBtnHover" open-type="getUserInfo" bindgetuserinfo="bindGetUserInfo" bindtap="weixinLoginTap">微信登录</button>
+<button class="wxLoginBtn" hover-class="wxLoginBtnHover" open-type="getUserInfo" bindgetuserinfo="bindWXGetUserInfo" bindtap="weixinLoginTap">微信登录</button>
 
 <template is="wxToast" data="{{...wxToastConfig}}"></template>
