--- a/pages/bill/bill.wxml
+++ b/pages/bill/bill.wxml
@@ -5,8 +5,22 @@
 </view>
 
 <view class='today_layout'>
-  <text class='today_tag'>今日消费</text>
-  <text class='today_money'>{{todayCost}}</text>
+  <text class='today_tag bold'>今日消费情况</text>
+  <text wx:if="{{!has}}" class='today_money'>{{todayCost}}</text> 
+</view>
+<view wx:if="{{has}}" class='horizontal_layout margin_normal'>
+  <view class='vertical_layout center_main auto '>
+    <text class='color_gray font_small'>总消费</text>
+    <text class='color_black font_big bold'>{{todayCost}}</text>
+  </view>
+  <view class='vertical_layout center_main auto lover_center_line'>
+    <text class='color_gray font_small'>本人消费</text>
+    <text class='color_black font_big bold'>{{todayMineCost}}</text>
+  </view>
+  <view class='vertical_layout center_main auto lover_center_line'>
+    <text class='color_gray font_small'>剩余预算</text>
+    <text class='color_black font_big bold'>{{leftBudget}}</text>
+  </view>
 </view>
 
 <button class='createBillBtn' hover-class='createBillBtnHover' bindtap='createBill'>记一笔</button>
